17/04/09 Julien Dutheil
* New class FunctionTools and ParameterGrid.
* New functions in NumCalcApplicationTools to support the keyval 
  option scheme.

29/03/09 Julien Dutheil
* New class ParameterListener
* Interface Parametrizable now supports "aliasing", with a defautl
  implementation in AbstractParametrizable, which is now in a separate file.
* Bug fixed in numerical derivatives, derivatives correctly updated when other
  methods than setParameters are called.
* Several other implementation improvements...
* Code updates (started to convert '_' prefixes into suffixes).

05/02/09 Julien Dutheil
* Bug fixed in EigenValue + code formating and improvement.
* New class TestUnit.

03/02/09 Julien Dutheil
* New classes TransformedParameter and ReparametrizationFunctionWrapper, to
  perform optimization without constraint.
* Creation of class NumConstants, and code updated accordingly.

16/01/09 Sylvain Gaillard
* Added new class NumCalcApplicationTools which provides application
  facilities depending on NumCalc class.

21/12/08 Julien Dutheil
* Bug fixed when there is only one class in GammaDiscreteDistribution.

21/07/08 -*- Version 1.6.0 -*-

12/11/08 Sylvain Gaillard
* New functions seq, breaks, range and nclassScott in VectorTools.

07/11/08 Julien Dutheil
* New function randMultinomial in RandomTools.

07/11/08 Sylvain Gaillard
* Fixed a bug in RandomTools::getSample.

06/11/08 Sylvain Gaillard
* Added boolean flag in RandomTools::getSample for sampling with replacement.
This function now throw IndexOutOfBoundsException if size of the sample is
higher than the original vector size and replacement is off.

28/10/08 Julien Dutheil
* New Numerical cross derivatives (3 points method only).
* New functions in NumTools to compute Hessian matrices.

21/07/08 -*- Version 1.5.0 -*-

04/04/08 Sylvain Gaillard
* New function paste in VectorTools.

03/04/08 Sylvain Gaillard & Julien Dutheil
* New functions whichAll and countValues in VectorTools.